
0.0.14:
  - Applied patch for basic-authorization provided by Knut Olav Bøhmer
  - Updated ensure-db to use missing-db error message instead of re-checking for db existance
  - Removed unused parameters from ensure-db
  - Added 'user' and 'password' parameters to with-connection macro
  - Fixed bug in save-attachment
  - Export db-protocol in package.lisp
  - Added create-target parmaeter to replicate
  - Removed references to create-view in doc
  - Added duplicate error handling to create-view
  - Added changes function (incomplete)

0.0.13:
  - Applied ad-hoc-view patch from Marco
  - Added basic authentication support
  - Updated tests

0.0.12: 
  - Added missing conflicts keyword parameter to get-document, tests
  - Added error handling in create-db for illegal database names
  - Added get-uuids function and related doc
  - Remembered to increment *couchdb-version* for the first time in a long time
  - Made (document-property) and (setf (document-property)) accept a list of property names
  - Made (set-document-property) accept multiple lists of property names
  - Made (get-document) accept documents with :|_id| or :|id| properties
  - Fixed (delete-document) to work more consistently with :if-missing

0.0.11:

  - Switched to using a structure to hold the database connection
    information that was previously contained in special
    variables. The structure is itself now a single special variable
    called *db*

  - Added support for stand-alone attachements

  - Added get-couchdb-info for getting CouchDb server information,
    previously this was available via get-db-info when no DB was
    specified.

  - Added database compaction support with the function compact-db

  - Added replication support with the replicate function

  - Added all-docs-by-seq function

  - Changed delete-document to take a required parameter which is
    either the document ID or the document, removed the keyword
    parameters :id and :document.
